--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,13 @@
+altgraph==0.17.3
+beautifulsoup4==4.11.1
+certifi==2022.9.24
+charset-normalizer==2.1.1
 et-xmlfile==1.1.0
+idna==3.4
+macholib==1.16.2
 openpyxl==3.0.10
+pyinstaller==5.5
+pyinstaller-hooks-contrib==2022.10
+requests==2.28.1
+soupsieve==2.3.2.post1
+urllib3==1.26.12
